# SPS-Research

./: .gitignore  DEV_LOG.md  FAILURES.md  LICENSE  README.md  README_NeurIPS_style.md  README_SPS_LaTeX.md  RESEARCH_PROCESS.md  pyproject.toml  requirements.txt
configs/: default.yaml
devlogs/: 2026-02-10.md  2026-02-12.md  2026-02-15.md  2026-02-20.md  2026-02-27.md  2026-03-01.md  2026-03-04.md  2026-03-06.md  2026-03-09.md  2026-03-13.md  2026-03-15.md  2026-03-17.md  2026-03-20.md  2026-03-24.md  2026-03-30.md  2026-04-09.md  2026-04-10.md  2026-04-11.md  2026-04-12.md  2026-04-13.md
experiments/: estimate_sps.py
failures/: 2026-02-10-random-perturbation-testing.md  2026-02-12-output-only-consistency-metric.md  2026-03-01-theorem-2.md  2026-03-06-proposition-1.md  2026-03-09-theorem-4.md  2026-03-13-notation-inconsistency.md  2026-03-17-readme-rendering.md  2026-03-24-wordnet-vocab-loading.md
src/sps/: __init__.py  core.py  jacobian.py  metrics.py  stats.py  transformations.py  utils.py
tests/: test_adversarial_sps.py  test_core.py  test_jacobian.py  test_metrics.py  test_relative_sps.py  test_stats.py  test_transformations.py
theory/: definitions.md  proofs.md
